# routing_optimization

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: case2.json  case3.json  simple_12_events.json  simple_4_events.json
scripts/: solve_case.ipynb  solve_case.py  solve_simple_12_event.py  solve_simple_4_event.py
src/routing_optimization/: algorithm.py  main.py  models.py  utils.py
tests/: test_planer.py  test_utils.py
