[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "routing-optimization"
version = "0.1.0"
description = "A python package for vehicle routing optimization."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "pydantic>=2.12.5",
    "typer>=0.21.1",
]

[project.optional-dependencies]
dev = [
    "black>=25.12.0",
    "isort>=7.0.0",
    "pytest>=9.0.2",
]

[tool.setuptools.packages.find]
where = ["src"]
